update for now dev

--- a/charge/package.json
+++ b/charge/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "charge serve source",
     "build": "charge build source dist",
+    "now-dev": "charge serve src",
     "now-build": "npm run build"
   },
   "devDependencies": {
