Initial changes until i decide wat 2 do

--- a/vuepress/now.json
+++ b/vuepress/now.json
@@ -3,5 +3,6 @@
   "name": "vuepress",
   "builds": [
     {"src": "package.json", "use": "@now/static-build"}
-  ]
+  ],
+  "alias": "stefannowak.xyz"
 }
